fix text overflow on public status

--- a/src/views/Profile/styles/Feed.css
+++ b/src/views/Profile/styles/Feed.css
@@ -2,7 +2,7 @@
   background-color: white;
   max-width: 694px;
   min-width: 694px;
-  height: 50px;
+  height: fit-content;
   padding: 10px 10px;
   left: calc(50vw - 350px);
   border: 1px solid #ececec;
@@ -42,13 +42,15 @@
 .statusUpdate__displayPublic {
   width: 100%;
   font-size: 1.1em;
-  height: 44px;
+  min-height: 44px;
   font-weight: 400;
   height: 100%;
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  padding: 8px; }
+  padding: 8px;
+  box-sizing: border-box;
+  word-break: break-all; }
 
 .statusUpdate:hover .hideStatusButton {
   display: block; }
